--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
           <div class="review-container">
             <div class="header">
               <img src="./images/image-colton.jpg" alt="Colton's Profile Picture">
-              <div class="review-customer">Colton Smith</div>
-              <div class="review-verification">Verified Buyer</div>
+              <div class="review-customerInfo">
+                <p class="review-customer">Colten Smith</p>
+                <p class="review-verification">Verified Buyer</p>
+              </div>
             </div>
             <div class="review-statement">
               <p>"We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
@@ -78,8 +80,10 @@
           <div class="review-container">
             <div class="header">
               <img src="./images/image-irene.jpg" alt="Irene's Profile Picture">
-              <div class="review-customer">Irene Roberts</div>
-              <div class="review-verification">Verified Buyer</div>
+              <div class="review-customerInfo">
+                <p class="review-customer">Irene Roberts</p>
+                <p class="review-verification">Verified Buyer</p>
+              </div>
             </div>
             <div class="review-statement">
               <p>
@@ -90,8 +94,10 @@
           <div class="review-container">
             <div class="header">
               <img src="./images/image-anne.jpg" alt="Anne's Profile Picture">
-              <div class="review-customer">Anne Wallace</div>
-              <div class="review-verification">Verified Buyer</div>
+              <div class="review-customerInfo">
+                <p class="review-customer">Anne Wallace</p>
+                <p class="review-verification">Verified Buyer</p>
+              </div>
             </div>
             <div class="review-statement">
               <p>
